<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/cardBackgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_card_ceil_price"
                android:textSize="@dimen/text_size_card_title"
                android:textStyle="bold"
                android:gravity="start"
                android:textColor="@color/textColorPrimary"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_trademark"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_card_title"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/textColorHighlight"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/inner_card_margin_large">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Economy"
                    android:textSize="@dimen/text_size_card_body_small"
                    android:textStyle="normal"
                    android:gravity="start"
                    android:textColor="@color/textColorMainLight"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_chevrolet_spark"
                    android:textSize="@dimen/text_size_card_body"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/inner_card_margin_small"
                    android:textColor="@color/textColorMain"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="bottom"
                        android:layout_marginEnd="@dimen/inner_card_margin_large"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="@dimen/inner_card_margin_small"
                            app:srcCompat="@drawable/ic_viewer"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/label_viewer"
                            android:gravity="start"
                            android:textColor="@color/textColorMain"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size_card_body_small" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="@dimen/inner_card_margin_large"
                        android:gravity="bottom"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="@dimen/inner_card_margin_small"
                            app:srcCompat="@drawable/ic_suitcase"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/label_suitcase"
                            android:gravity="start"
                            android:textColor="@color/textColorMain"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size_card_body_small" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="bottom"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="@dimen/inner_card_margin_small"
                            app:srcCompat="@drawable/ic_no_of_seat"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_created_date"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/label_seat"
                            android:gravity="start"
                            android:textColor="@color/textColorMain"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size_card_body_small" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/car" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_time_from"
                    android:gravity="center"
                    android:textColor="@color/textColorMain"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_card_body" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pick_up"
                    android:gravity="center"
                    android:textColor="@color/textColorMainLight"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_card_body_small" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/colorSecondaryLight"
                   android:layout_marginTop="@dimen/inner_card_margin_xsmall"
                   android:layout_marginBottom="@dimen/inner_margin"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labe_transit"
                    android:gravity="center"
                    android:textColor="@color/textColorSecondaryLight"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_card_body_small" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_time_to"
                    android:gravity="center"
                    android:textColor="@color/textColorMain"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_card_body" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_drop_off"
                    android:gravity="center"
                    android:textColor="@color/textColorMainLight"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_card_body_small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.card.MaterialCardView>