<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">
    <include
        layout="@layout/toolbar_detail"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/statusBarColor"
            android:padding="@dimen/activity_vertical_margin">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                app:srcCompat="@drawable/car" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_luxury_car"
                android:textSize="@dimen/text_size_card_body"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/inner_card_margin_xsmall"
                android:textColor="@color/textColorSecondaryLight"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textSize="@dimen/text_size_card_body"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="@dimen/inner_card_margin_xsmall"
                android:textColor="@color/textColorMain"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_time_from_to"
                android:textSize="@dimen/text_size_card_body_small"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorMain"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@color/textColorPrimary"
                android:layout_gravity="bottom">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/label_dollar_price"
                    android:gravity="start"
                    android:textColor="@color/statusBarColor"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_size_card_title"
                    android:layout_marginBottom="@dimen/inner_margin"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="start|center">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/labe_cad_per_day"
                        android:gravity="start"
                        android:textColor="@color/statusBarColor"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_card_body_small" />
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_included"
                        android:gravity="start"
                        android:textColor="@color/statusBarColor"
                        android:textStyle="normal"
                        android:textSize="@dimen/text_size_card_body_small" />
                </LinearLayout>
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:text="@string/label_btn_book"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_card_body"
                    android:background="@color/statusBarColor"
                    android:backgroundTint="@color/statusBarColor"
                    android:textStyle="bold"
                    android:textColor="@color/textColorPrimary"/>
            </LinearLayout>
            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/cardBackgroundColor">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_offer_details"
                        android:textSize="@dimen/text_size_card_title"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:textColor="@color/textColorPrimary"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/inner_card_margin_large">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/label_car_feature"
                            android:textSize="@dimen/text_size_card_body"
                            android:textStyle="bold"
                            android:lineSpacingExtra="4sp"
                            android:gravity="start"
                            android:textColor="@color/textColorMain"/>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:gravity="end|center"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:gravity="bottom"
                                    android:layout_marginEnd="@dimen/inner_card_margin_large"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <android.support.v7.widget.AppCompatImageView
                                        android:layout_width="14dp"
                                        android:layout_height="14dp"
                                        android:layout_marginEnd="@dimen/inner_card_margin_small"
                                        app:srcCompat="@drawable/ic_viewer"/>
                                    <android.support.v7.widget.AppCompatTextView
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"
                                        android:text="@string/label_viewer"
                                        android:gravity="start"
                                        android:textColor="@color/textColorMain"
                                        android:textStyle="normal"
                                        android:textSize="@dimen/text_size_card_body_small" />
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_marginEnd="@dimen/inner_card_margin_large"
                                    android:gravity="bottom"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <android.support.v7.widget.AppCompatImageView
                                        android:layout_width="14dp"
                                        android:layout_height="14dp"
                                        android:layout_marginEnd="@dimen/inner_card_margin_small"
                                        app:srcCompat="@drawable/ic_suitcase"/>
                                    <android.support.v7.widget.AppCompatTextView
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"
                                        android:text="@string/label_suitcase"
                                        android:gravity="start"
                                        android:textColor="@color/textColorMain"
                                        android:textStyle="normal"
                                        android:textSize="@dimen/text_size_card_body_small" />
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:gravity="bottom"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <android.support.v7.widget.AppCompatImageView
                                        android:layout_width="14dp"
                                        android:layout_height="14dp"
                                        android:layout_marginEnd="@dimen/inner_card_margin_small"
                                        app:srcCompat="@drawable/ic_no_of_seat"/>
                                    <android.support.v7.widget.AppCompatTextView
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"
                                        android:text="@string/label_seat"
                                        android:gravity="start"
                                        android:textColor="@color/textColorMain"
                                        android:textStyle="normal"
                                        android:textSize="@dimen/text_size_card_body_small" />
                                </LinearLayout>
                            </LinearLayout>
                    </LinearLayout>
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/img_map" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_time_from"
                                android:gravity="center"
                                android:textColor="@color/textColorMain"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_card_body" />
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_pick_up"
                                android:gravity="center"
                                android:textColor="@color/textColorMainLight"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_card_body_small" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/colorSecondaryLight"
                                android:layout_marginTop="@dimen/inner_card_margin_xsmall"
                                android:layout_marginBottom="@dimen/inner_margin"/>
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/labe_transit"
                                android:gravity="center"
                                android:textColor="@color/textColorSecondaryLight"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_card_body_small" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_time_to"
                                android:gravity="center"
                                android:textColor="@color/textColorMain"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_card_body" />
                            <android.support.v7.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_drop_off"
                                android:gravity="center"
                                android:textColor="@color/textColorMainLight"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_card_body_small" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.design.card.MaterialCardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>